--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <main>
         <section class="card">
           <div class="section-title">Curriculum Vitae (Singkat)</div>
-          <p><strong>Nama:</strong> [irfan udin]</p>
+          <p><strong>Nama:</strong> [irfan ]</p>
           <p><strong>Tanggal Lahir:</strong> [malang,09,08,2006]</p>
           <p><strong>Alamat:</strong> [malang,permanu,blau]</p>
           <p><strong>Kontak:</strong> [088991552876 / email]</p>
