--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Profil TKJ - [ABSEN] - [NAMA]</title>
   <style>
     /* --- CSS internal --- */
-    :root{--bg:#f7f8fb;--card:#ffffff;--accent:#0b5cff;--muted:#666}
+    :root{--bg:#000000;--card:#3a3636;--accent:#0b5cff;--muted:#666}
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;margin:0;background:var(--bg);color:#222}
     .container{max-width:900px;margin:32px auto;padding:24px;background:var(--card);border-radius:12px;box-shadow:0 6px 20px rgba(0,0,0,0.06)}
     header{display:flex;align-items:center;gap:20px}
