--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
           <div class="section-title">Tabel Keahlian TKJ</div>
           <table class="skills">
             <tr><th>Keahlian</th><th>Level (1-5)</th></tr>
-            <tr><td>[Sesuaikan]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[Sesuaikan]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[Sesuaikan]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[Sesuaikan]</td><td>[Sesuaikan]</td></tr>
+            <tr><td>[program web]</td><td>[Sesuaikan]</td></tr>
+            <tr><td>[instal deb 10]</td><td>[Sesuaikan]</td></tr>
+            <tr><td>[]</td><td>[Sesuaikan]</td></tr>
+            <tr><td>[Sesuaika]</td><td>[Sesuaikan]</td></tr>
           </table>
         </section>
 
