--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <title>Profil TKJ - [ABSEN] - [NAMA]</title>
   <style>
     /* --- CSS internal --- */
-    :root{--bg:#000000;--card:#3a3636;--accent:#0b5cff;--muted:#666}
+    :root{--bg:#000000;--card:#18a8c2ef;--accent:#0b5cff;--muted:#666}
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;margin:0;background:var(--bg);color:#222}
     .container{max-width:900px;margin:32px auto;padding:24px;background:var(--card);border-radius:12px;box-shadow:0 6px 20px rgba(0,0,0,0.06)}
     header{display:flex;align-items:center;gap:20px}
     .header-text{flex:1}
-    h1{margin:0;font-size:28px;color:var(--accent)}
-    .role{margin-top:6px;color:var(--muted)}
+    h1{margin:0;font-size:28px;color:var(black)}
+    .role{margin-top:6px;color:var(black)}
     .photo{width:150px;height:150px;border-radius:8px;object-fit:cover;border:4px solid #3a2a2a;box-shadow:0 6px 16px rgba(0,0,0,0.08)}
 
     .grid{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:20px}
-    .card{background:linear-gradient(0deg, rgba(255,255,255,1), rgba(255,255,255,0.94));padding:16px;border-radius:10px}
+    .card{background:linear-gradient(0deg, rgb(35, 87, 201), rgba(255,255,255,0.94));padding:16px;border-radius:10px}
     .section-title{font-weight:700;margin-bottom:8px}
     table{width:100%;border-collapse:collapse}
     table td, table th{padding:8px;border:1px solid #eee}
@@ -34,10 +34,10 @@
       <div class="header-text">
         <h1>irfan udin</h1>
         <div class="role">Calon Peserta UKK - Teknik Komputer dan Jaringan (TKJ)</div>
-        <div style="margin-top:10px;color:var(--muted)">Absensi: 6 &nbsp;|&nbsp; Kelas: XII TKJ 2</div>
+        <div style="margin-top:10px;color:var(black)">Absensi: 6 &nbsp;|&nbsp; Kelas: XII TKJ 2</div>
       </div>
       <!-- Foto: simpan di folder images/photo.jpg -->
-      <img src="images/photo.jpg" alt="Foto [NAMA]" class="photo">
+      <img src="Foto TKJ 2/6.jpg" alt="Foto irfan" class="photo">
     </header>
 
     <div class="grid">
@@ -52,17 +52,17 @@
           <div class="section-title">Pendidikan</div>
           <ul>
             <li>SMK Budi Mulia Pakisaji — Teknik Komputer & Jaringan</li>
-            <li>mts hidayatul ulum / SDN permanu 02 — optiona]</li>
+            <li>mts hidayatul ulum / SDN permanu 02 — optiona</li>
           </ul>
 
           <div style="margin-top:12px" class="section-title">Pengalaman / Portofolio</div>
-          <p>[Tuliskan 1–3 proyek atau tugas yang pernah dibuat — judul + deskripsi singkat]</p>
+          <p>ikut futsal di smkbm</p>
 
           <div style="margin-top:12px" class="section-title">Daftar Pelajaran Produktif TKJ yang Diingat</div>
           <ul>
-            <li>[IJ]</li>
-            <li>[PW]</li>
-            <li>[TJL]</li>
+            <li>IJ</li>
+            <li>PW</li>
+            <li>TJL</li>
           </ul>
 
         </section>
@@ -71,45 +71,49 @@
           <div class="section-title">Tabel Keahlian TKJ</div>
           <table class="skills">
             <tr><th>Keahlian</th><th>Level (1-5)</th></tr>
-            <tr><td>[program web]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[instal deb 10]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[Sesuaika]</td><td>[Sesuaikan]</td></tr>
+            <tr><td>program web</td><td>5</td></tr>
+            <tr><td>instal deb 10</td><td>3</td></tr>
+            <tr><td>inspektruktur jaringan</td><td>3</td></tr>
+            <tr><td>teknik jaringan luas</td><td>5</td></tr>
           </table>
         </section>
 
         <!-- Contoh variasi: jika absen=3 tambahkan kutipan motivasi di bawah ini -->
         <section class="card" style="margin-top:16px">
-          <div class="section-title">Elemen Tambahan (sesuai absen)</div>
-          <p>[Tambahkan elemen unik sesuai daftar variasi per absen]</p>
+          <div class="section-title">Elemen Tambahan (6)</div>
+          <p>giat lah belajar</p>
         </section>
       </main>
 
       <aside>
         <section class="card">
           <div class="section-title">Link & Kontak</div>
-          <p><strong>GitHub:</strong> <a href="https://github.com/username" target="_blank">https://github.com/username</a></p>
-          <p><strong>Portfolio / Deploy:</strong> <a href="https://ukk-nama-tkj.netlify.app" target="_blank">Link Deploy (jika ada)</a></p>
+          <p><strong>GitHub:</strong> <a href="https://github.com/irfan-tkj2" target="_blank">https://github.com/irfan-tkj2</a></p>
+          <p><strong>Portfolio / Deploy:</strong> <a href="https://irfan-ukk-pw-2025.netlify.app" target="_blank">https://irfan-ukk-pw-2025.netlify.app </a></p>
         </section>
 
         <section class="card" style="margin-top:16px">
           <div class="section-title">Daftar Mata Pelajaran Favorit</div>
           <ul>
-            <li>[ij]</li>
-            <li>[b indoneisa]</li>
+            <li>ij</li>
+            <li>b indoneisa</li>
             <li>pai</li>
           </ul>
         </section>
 
         <section class="card" style="margin-top:16px">
           <div class="section-title">Footer UKK TKJ</div>
-          <p>SMK Budi Mulia Pakisaji — UKK TKJ © [Tahun]</p>
+          <p>SMK Budi Mulia Pakisaji — UKK TKJ © 2025</p>
         </section>
       </aside>
     </div>
+    <section class="card" style="margin-top:16px">
+          <div class="section-title">TENTANG SAYA</div>
+          <p>saya suka bermain futsal</p>
+        </section>
 
     <footer>
-      Dibuat oleh [NAMA] • Absensi [NO] • Kelas [X/XI/XII]
+      Dibuat oleh irfan • Absensi 6• Kelas XII
     </footer>
   </div>
 </body>
